tests/snapshots/cli__report_markdown_golden.snap
---
source: tests/cli.rs
expression: stdout
---
# EnvLens Report

Project: tests/fixtures/basic
Generated: 1970-01-01T00:00:00Z
Profile: default

## Summary

- Sources scanned: 4
- Variables found: 8
- Required variables missing: 2
- Conflicts: 1
- Secret-like variables: 3
- Diagnostics: 2 errors, 2 warnings, 1 infos

## Errors

### MISSING_REQUIRED: JWT_SECRET

`JWT_SECRET` is required but is not defined in active value-bearing sources.

| Source | Line | Value |
|---|---:|---|
| `.env.example` | 4 | `••••••••` |

### MISSING_REQUIRED: REDIS_URL

`REDIS_URL` is required but is not defined in active value-bearing sources.

| Source | Line | Value |
|---|---:|---|
| `.env.example` | 5 | `` |

## Warnings

### UNDEFINED_REFERENCE: API_URL

API_URL references undefined variable HOST

Effective value: `${HOST}:5001` from `.env`

| Source | Line | Value |
|---|---:|---|
| `.env` | 4 | `${HOST}:${PORT}` |

### CONFLICTING_VALUES: PORT

PORT differs across sources: .env:2 (3000), .env.local:1 (5001). Effective value is 5001 from .env.local.

Effective value: `5001` from `.env.local`

| Source | Line | Value |
|---|---:|---|
| `.env.example` | 2 | `` |
| `.env` | 2 | `3000` |
| `.env.local` | 1 | `5001` |
